# radar_token_hunter

./: README.md  pyproject.toml
api/: advisor.py  main.py  pipeline_adapter.py
api/templates/: 404.html  ask.html  base.html  compare.html  detail.html  index.html
config/: __init__.py  logging_setup.py  settings.py
core/: __init__.py  pipeline.py
data/: anthropic_official_pricing.json  artificial_analysis_pricing.json  evidence.jsonl  google_ai_official_pricing.json  groq_official_pricing.json  models.json  openai_official_pricing.json  openrouter_pricing.json
docs/state/: FILE_MAP.md  NEXT_STEPS.md  OPEN_QUESTIONS.md  PROJECT_STATE.md  RUN_INSTRUCTIONS.md
ingestion/: __init__.py  base.py  file_sources.py  openrouter.py  source_registry.py
models/: __init__.py  llm.py  token.py
normalization/: __init__.py  canonical.py  normalizer.py
scoring/: __init__.py  best_buy.py  best_buy_v1.py
scripts/: run_pipeline.py  run_server.py
storage/: __init__.py  evidence.py  repository.py
tests/: conftest.py  test_pipeline.py
token_hunter.egg-info/: PKG-INFO  requires.txt
verification/: __init__.py  verifier.py
verification/token_hunter.egg-info/: SOURCES.txt  top_level.txt
zamer/: DECISIONS.md  IOS_STRATEGY.md  MVP_PLAN.md  PRODUCT_MAP.md  PROJECT_COMPASS.md  README.md  REFERENCES.md  ROADMAP.md  SCOPE.md  SCORING_POLICY.md  SOURCE_POLICY.md
